--- a/dentist.html
+++ b/dentist.html
@@ -105,9 +105,7 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
 </body>
-
+    
 </html>
